# turinglike-oversophisticated-calculator

./: .gitignore  Cargo.toml  Makefile  README.md  TASK.md
example/: square.tm
src/: interpreter.rs  translate.rs  types.rs
src/machine/: classic.rs  mod.rs
src/machine/component/: mod.rs  tape.rs  transition.rs
src/machine/logic/: loader.rs
src/machine/translation/: double_transition.rs  mod.rs  translator.rs
