[package]
name = "turinglike-oversophisticated-calculator"
version = "0.1.0"
authors = ["mbalc <mbalc909@gmail.com>"]
edition = "2018"

[[bin]]
name = "interpreter"
path = "src/interpreter.rs"

[[bin]]
name = "translate"
path = "src/translate.rs"

[build-dependencies]
clippy = { version = "*", optional = true }

[dependencies]
derive_more = "0.99.11"
intbits = "0.2.0"
itertools = "0.9.0"
scan_fmt = "0.2.5"
